fix firebase